# XMU_SeLearning

./: LICENSE  README.md
大一上/: README.md
大一上/C Language Design/: README.md
大一上/大学语文/: README.md  围城.docx  围城成文.docx  小测 随堂.doc  看见成文.docx
大一上/形策/: 2021年（秋）形势与政策考试题库2021.11(1) - 副本.docx
大一上/微积分I-1/: README.md
大一上/思修/: README.md  思修 期末考试考生注意事项2021.12.docx
大一上/线性代数/: README.md
大一下/: README.md
大一下/C++/: README.md
大一下/C艹/实验报告/第一次实验/cpp-project-template/: CMakeLists.txt  LICENSE  config.h.in
大一下/C艹/实验报告/第一次实验/cpp-project-template/src/: main.cpp
大一下/大学物理B（上）/: 9.热力学基础01.pptx  9.热力学基础03.pptx  README.md
大一下/大英4 - 当代英国/: Chapter 13 The Importance of Scotland to the.pptx  Guide to Course.pptx  教学计划20212022220002004002201 2.xlsx
大一下/微积分I-2/: D10_3格林公式.ppt  D10_5对坐标曲面积分.ppt  D10_习题课.ppt  D11_2数项级数及审敛法.ppt  D11_3幂级数.ppt  D11_4函数展开成幂级数.ppt  D11习题课.ppt  D12_1基本概念.ppt  D12_2可分离.ppt  D12习题课(2).ppt  D7_2点积叉积.ppt  D7_3曲面方程.ppt  D7_4空间曲线.ppt  D8_4复合求导.ppt  D8_6几何中的应用.ppt  D9_3三重积分.ppt  D9_4重积分的应用.ppt  README.md
大一下/概率统计/: README.md
大一下/电路/: README.md
大一下/软件竞赛/: 03软件竞赛第三次实验.doc  背景、总结、展望.doc
大一下/近代史纲要/: 近代史纲要简答题、辨析题、论述题.docx
大一小学期/: readme.md
大一小学期/cpp_prac/: 实训_22920212204115_赖昊文.docx  期末论文要求(2022年7月12日).pptx
大三上/: readme.md
大三上/JavaEE/: readme.md
大三上/JavaEE(仅课件材料)/: readme.md
大三上/OOAD/: OOADScore2023final.rar  readme.md
大三上/SOA/: readme.md
大三上/dotNet/: readme.md
大三上/其他/: cey整理的2017级试卷题目.txt
大三上/国家税收/: 第七章  增值税税收制度.pptx  (+3 more)
大三下/: readme.md
大二上/: README.md
大二下/: README.md  大二上思政期末考提纲.rar
大二小学期/: ~$狗二手交易系统 - JAVA实践课程项目开发报告2023.docx
(+3916 files in other folders)
